<resources>
    <string name="app_name">Pocket Pantry</string>
    <string name="app_version">Pocket Pantry 1.10</string>
    <string name="pantry_title">My Pantry:</string>
    <string name="nameLabel">Name:</string>
    <string name="priceLabel">Price:</string>
    <string name="dollarSign">$</string>
    <string name="dateLabel">Expiration Date:</string>
    <string name="addItemButtonText">Add Item</string>
    <string name="blank" />
    <string name="zero">0.00</string>
    <string name="title_activity_entry_ui">EntryUI</string>
    <string name="quantityLabel">Quantity:</string>
    <string name="removeButtonText">Remove Item</string>
    <string name="editButtonText">Edit Item</string>
    <string name="helpList">Pantry - You can add anything you have on hand to your pantry to better keep track of all your food and supplies.
        \n\nGrocery List- This is a wonderful place to store everything you\'re going to need, the add button can make sure you keep track of what you need on your way to the store. As well as having the ability to remove items you feel you dont need anymore!
        \n\nRecipe List- This is an area to add custom recipes that will\n be shared across all user in the same account!\n\n
        Spice Rack- This is a list to store what spices you have on hand\n in your pantry\n\n
        Allergy List- Store your allergies here and they will be checked against custom recipes and alert you when\n someone is allergic to a recipe you created!
        \n\n\nApplication Credits:\n\nDevelopers:\n\nJustin Smith - JPSmith@student.fullsail.edu\nDe\'Angelo Rieke - DERieke@student.fullsail.edu\n </string>
    <string name="title_activity_add_recipe">AddRecipe</string>
    <string name="nameColumn">Item name</string>
    <string name="priceAndDateColumn">Expiration Date</string>
    <string name="quantityColumn">Quantity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_add_ingredient">AddIngredient</string>
    <string name="unitLabel">Unit:</string>
    <string name="GCT1">Ingredients required: \nBlocked white cheddar cheese\nSliced munster cheese\nSliced bread of choice\nButter or butter substitute of choice\n
    Utensils required: \nSkillet\nHeat resistant flipper\nSpreading knife\nCheese slicer(Wire or otherwise)\nBasic kitchen knife</string>
    <string name="GCT2">Use your cheese slicer to cut generous slices off your block of white cheddar\nSet these to the side for now, grab two slices of bread and butter one side generously on each\n
    When you have everything prepared move on to the next step!</string>
    <string name="GCT3">Now place your skillet over a medium heat\nPlace the bread butter side down into the skillet placing 2 slices of cheddar on one piece of bread and 2 slices of munster on the other\n
    wait until you can see the cheese start to glisten and melt. Use your flipper to place the two pieces of bread together\nContinue cooking each side evenly flipping the sandwich frequently until golden brown\n Slice and enjoy!</string>
</resources>
